# paperback-cover-backend

./: .dockerignore  .gitignore  Dockerfile  README.md  compose.yml  main.py  pyproject.toml  settings.prod.yaml  settings.yaml
compose/postgres/: Dockerfile  custom-entrypoint.sh
migrations/: env.py
migrations/versions/: 64f87c4cad1d_.py
paperback_cover/: config.py  containers.py  main.py
paperback_cover/auth/: common.py  repository.py  routes.py  service.py
paperback_cover/auth/oauth_providers/: base.py  facebook.py  google.py  linkedin.py
paperback_cover/billing/dodopayments/: routes.py  schema.py  service.py
paperback_cover/book_cover/: schema.py
paperback_cover/commons/: annotations.py  db.py  file_validator.py
paperback_cover/cover_art/: aspect_ratio_utility.py  img_models.py  replicate_artwork_service.py  routes.py  schema.py
paperback_cover/credit/: routes.py  schema.py  service.py
paperback_cover/feedback/: routes.py  schema.py  service.py
paperback_cover/models/: asset.py  auth.py  base.py  credit.py  dodopayments.py  feedback.py  user.py
paperback_cover/openai/: background_analyser_service.py  cover_analyser_service.py  final_prompt_optimiser_service.py  gemini_client.py  openai_client.py
paperback_cover/registration/: user_manager.py
paperback_cover/replicate/: replicateclient.py
paperback_cover/security/: custom_encoding_service.py
paperback_cover/storage_service/: schema.py  service.py
paperback_cover/user/: repository.py  routes.py  schema.py  service.py
paperback_cover/userassets/: routes.py  schema.py  service.py
(+14 files in other folders)
