[tool.poetry]
name = "paperback-cover"
version = "0.1.0"
description = ""
authors = ["venkatesh-sekar"]
readme = "README.md"
packages = [{include = "paperback_cover"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.3"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
dynaconf = "^3.2.5"
fastapi-users = {extras = ["oauth", "sqlalchemy"], version = "^13.0.0"}
asyncpg = "^0.29.0"
alembic = "^1.13.1"
psycopg = {extras = ["binary"], version = "^3.1.19"}
cachetools = "^5.3.3"
asyncache = "^0.3.1"
boto3 = "^1.34.113"
fastapi-pagination = "^0.12.24"
openai = "^1.51.0"
replicate = "^0.34.1"
cloudflare = "^4.0.0"
filetype = "^1.2.0"
fonttools = {extras = ["woff"], version = "^4.56.0"}
pillow = "^11.1.0"
google-genai = "^1.10.0"
webcolors = "^24.11.1"
dodopayments = "^1.34.1"
standardwebhooks = "^1.0.0"
thefuzz = {extras = ["speedup"], version = "^0.22.1"}
reportlab = "^4.4.3"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
